--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/style2.css">
     <script src="js/scripts.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
@@ -11,7 +11,7 @@
 
     <nav class="same-line">
         <div class="topnav left">
-            <a href="#home">YOUR NAME</a>
+            <a href="#home">Matthew Valentino</a>
         </div>
         <div class="topnav right">
             <a href="#home">Home</a>
@@ -28,9 +28,9 @@
         <div class="same-line-panel">
             <img id="image" src=profile.png>
             <div class="center">
-                <h1>YOUR NAME</h1>
+                <h1>Matthew Valentino</h1>
                 <h2>Undergraduate Student</h2>
-                <h3>Majors, Minors</h3>
+                <h3>Computer Engineering</h3>
             </div>
 
         </div>
@@ -42,7 +42,7 @@
         <div class="same-line-panel reveal">
             <img id="logo" src=logo.png>
             <div class="panel">
-                <p>Put your Bio Here</p>
+                <p>I am a senior Computer Engineering student at UMD.</p>
             </div>
 
         </div>
@@ -52,16 +52,16 @@
             <h1 class="section-header">Projects</h1>
             <div class="row">
                 <div class="column reveal" style="background-color:#A4969B;">
-                    <h2>Project 1 Title</h2>
-                    <p>Description of Project 1...</p>
+                    <h2>Test File Generation</h2>
+                    <p>Worked in Matlab to generate files needed to test hardware.</p>
                 </div>
                 <div class="column reveal" style="background-color:#BFB5B9;">
-                    <h2>Project 2 Title</h2>
-                    <p>Description of Project 2...</p>
+                    <h2>png2ppt</h2>
+                    <p>Worked in Matlab to generate powerpoints containing specific images from tests</p>
                 </div>
                 <div class="column reveal" style="background-color:#D1CACD;">
-                    <h2>Project 3 Title</h2>
-                    <p>Description of Project 3...</p>
+                    <h2>PACMAN</h2>
+                    <p>Worked in a team to create a pacman copy to further understanding of git</p>
                 </div>
             </div>
         </div>
@@ -69,14 +69,14 @@
 </body>
 <footer>
     <div class="leftFooter">
-        YOUREMAIL@EMAIL.COM
+        mattval@terpmail.umd.edu
     </div>
     <div class="rightFooter">
-        <a href="https://www.google.com/" class="fa fa-github" style="font-size:36px"></a>
+        <a href="https://github.com/mattval1342" class="fa fa-github" style="font-size:36px"></a>
 
     </div>
     <div class="rightFooterr">
-        <a href="https://www.google.com/" class="fa fa-linkedin" style="font-size:36px"></a>
+        <a href="https://www.linkedin.com/in/matthew-valentino-514723262/" class="fa fa-linkedin" style="font-size:36px"></a>
 
     </div>
 </footer>
