--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/style2.css">
+    <link rel="stylesheet" href="css/styles.css">
     <script src="js/scripts.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
@@ -26,7 +26,7 @@
     <section id="home">
 
         <div class="same-line-panel">
-            <img id="image" src=profile.png>
+            <img id="logo" src="profile.png">
             <div class="center">
                 <h1>Matthew Valentino</h1>
                 <h2>Undergraduate Student</h2>
@@ -40,9 +40,9 @@
             <h1 class="section-header">About Me</h1>
         </div>
         <div class="same-line-panel reveal">
-            <img id="logo" src=logo.png>
+            <img id="logo" src="logo.png">
             <div class="panel">
-                <p>I am a senior Computer Engineering student at UMD.</p>
+                <p>I'm a passionate and forward-thinking computer engineering major on a relentless journey to shape the digital world. My fascination with circuits, algorithms, and cutting-edge technology drives me to constantly explore and innovate. With an insatiable curiosity and a knack for problem-solving, I thrive on dissecting complex challenges and finding elegant solutions. Whether it's designing efficient hardware systems or crafting ingenious software, I relish the art of creation in this digital age. In my free time, you'll find me coding, tinkering with gadgets, and discussing the latest tech trends. I'm not just a computer engineer; I'm a catalyst for the future of technology.</p>
             </div>
 
         </div>
@@ -51,15 +51,15 @@
         <div class="container">
             <h1 class="section-header">Projects</h1>
             <div class="row">
-                <div class="column reveal" style="background-color:#A4969B;">
+                <div class="column reveal" style="background-color:#6ba161;">
                     <h2>Test File Generation</h2>
                     <p>Worked in Matlab to generate files needed to test hardware.</p>
                 </div>
-                <div class="column reveal" style="background-color:#BFB5B9;">
+                <div class="column reveal" style="background-color:#6ba161;">
                     <h2>png2ppt</h2>
                     <p>Worked in Matlab to generate powerpoints containing specific images from tests</p>
                 </div>
-                <div class="column reveal" style="background-color:#D1CACD;">
+                <div class="column reveal" style="background-color:#6ba161;">
                     <h2>PACMAN</h2>
                     <p>Worked in a team to create a pacman copy to further understanding of git</p>
                 </div>
