--- a/page.html
+++ b/page.html
@@ -8,7 +8,7 @@
     <header>
         <nav class="same-line">
             <div class="topnav left">
-                <a href="#news">YOUR NAME</a>
+                <a href="#news">Matthew Valentino</a>
             </div>
             <div class="topnav right">
                 <a href="#home">Home</a>
@@ -21,9 +21,9 @@
     <section id="home">
 
         <div class="center">
-            <h1>YOUR NAME</h1>
+            <h1>Matthew Valentino</h1>
             <h2>Undergraduate Student</h2>
-            <h3>Majors, Minors</h3>
+            <h3>Computer Engineering</h3>
         </div>
 
     </section>
@@ -111,6 +111,6 @@
     </section>
     <div class="footer">
         <p>YOUR NAME<br>
-            <a href="mailto:hege@example.com"> YOUR EMAIL</a>
+            <a href="mailto:mattval@terpmail.umd.edu"> mattval@terpmail.umd.edu</a>
         </p>
     </div>
