--- a/index.html
+++ b/index.html
@@ -40,9 +40,15 @@
             <h1 class="section-header">About Me</h1>
         </div>
         <div class="same-line-panel reveal">
-            <img id="logo" src="logo.png">
             <div class="panel">
-                <p>I'm a passionate and forward-thinking computer engineering major on a relentless journey to shape the digital world. My fascination with circuits, algorithms, and cutting-edge technology drives me to constantly explore and innovate. With an insatiable curiosity and a knack for problem-solving, I thrive on dissecting complex challenges and finding elegant solutions. Whether it's designing efficient hardware systems or crafting ingenious software, I relish the art of creation in this digital age. In my free time, you'll find me coding, tinkering with gadgets, and discussing the latest tech trends. I'm not just a computer engineer; I'm a catalyst for the future of technology.</p>
+                <p>
+                    I'm a passionate and forward-thinking computer engineering major on a relentless journey to shape the digital world. 
+                    My fascination with circuits, algorithms, and cutting-edge technology drives me to constantly explore and innovate. 
+                    With an insatiable curiosity and a knack for problem-solving, I thrive on dissecting complex challenges and finding elegant solutions. 
+                    Whether it's designing efficient hardware systems or crafting ingenious software, I relish the art of creation in this digital age. 
+                    In my free time, you'll find me coding, tinkering with gadgets, and discussing the latest tech trends. 
+                    I'm not just a computer engineer; I'm a catalyst for the future of technology.
+                </p>
             </div>
 
         </div>
